assignment_3/build/out
/home/pietro/Lab_compilatori3/LocalOpts.cpp: In member function ‘llvm::PreservedAnalyses {anonymous}::MyFunctionPass::run(llvm::Function&, llvm::FunctionAnalysisManager&)’:
/home/pietro/Lab_compilatori3/LocalOpts.cpp:75:29: error: ‘begin’ was not declared in this scope
   75 |       for (BasicBlock &BB : ParentFunc){
      |                             ^~~~~~~~~~
/home/pietro/Lab_compilatori3/LocalOpts.cpp:75:29: note: suggested alternatives:
In file included from /usr/include/c++/12/string:52,
                 from /usr/include/c++/12/bits/locale_classes.h:40,
                 from /usr/include/c++/12/bits/ios_base.h:41,
                 from /usr/include/c++/12/streambuf:41,
                 from /usr/include/c++/12/bits/streambuf_iterator.h:35,
                 from /usr/include/c++/12/iterator:66,
                 from /usr/include/llvm-19/llvm/ADT/DenseMap.h:30,
                 from /usr/include/llvm-19/llvm/ADT/DenseSet.h:17,
                 from /usr/include/llvm-19/llvm/IR/Function.h:20,
                 from /home/pietro/Lab_compilatori3/LocalOpts.cpp:1:
/usr/include/c++/12/bits/range_access.h:114:37: note:   ‘std::begin’
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
In file included from /usr/include/c++/12/utility:73,
                 from /usr/include/llvm-19/llvm/ADT/DenseMapInfo.h:22,
                 from /usr/include/llvm-19/llvm/ADT/DenseMap.h:17:
/usr/include/c++/12/initializer_list:90:5: note:   ‘std::begin’
   90 |     begin(initializer_list<_Tp> __ils) noexcept
      |     ^~~~~
/home/pietro/Lab_compilatori3/LocalOpts.cpp:75:29: error: ‘end’ was not declared in this scope
   75 |       for (BasicBlock &BB : ParentFunc){
      |                             ^~~~~~~~~~
/home/pietro/Lab_compilatori3/LocalOpts.cpp:75:29: note: suggested alternatives:
/usr/include/c++/12/bits/range_access.h:116:37: note:   ‘std::end’
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/usr/include/c++/12/initializer_list:101:5: note:   ‘std::end’
  101 |     end(initializer_list<_Tp> __ils) noexcept
      |     ^~~
/home/pietro/Lab_compilatori3/LocalOpts.cpp:76:56: error: base operand of ‘->’ has non-pointer type ‘llvm::BasicBlock’
   76 |         errs() << "Stampa del CFG dall'header: " << (BB->hasName() ? BB->getName() : "(unnamed)") << "\n";
      |                                                        ^~
/home/pietro/Lab_compilatori3/LocalOpts.cpp:76:72: error: base operand of ‘->’ has non-pointer type ‘llvm::BasicBlock’
   76 |         errs() << "Stampa del CFG dall'header: " << (BB->hasName() ? BB->getName() : "(unnamed)") << "\n";
      |                                                                        ^~
make[2]: *** [CMakeFiles/TestPass.dir/build.make:76: CMakeFiles/TestPass.dir/LocalOpts.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:245: CMakeFiles/TestPass.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
